Fixed a bit the spacing of the nav

--- a/src/styles/_Library.scss
+++ b/src/styles/_Library.scss
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 20rem;
+  width: 19rem;
   height: 100%;
   overflow: scroll;
   box-shadow: 2px 2px 30px rgb(202, 199, 199);
