--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -4,6 +4,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   padding-top: 2rem;
+  padding-left: 3rem;
   button {
     background-color: transparent;
     padding: 1rem;
